[package]
name = "kofxv_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
byteorder = "1.4.3"
eframe = "0.21.3"
rfd = "0.11.1"